src/test/deca/context/valid/personal/class_method_with_sign.deca
// Description:
//    test minimaliste pour testé le pass 2 (sign)
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025

class A{
}

class B {
    void  hi(B b){
        
    }
}