src/test/deca/context/invalid/method_double_def.deca
// Description:
//    Double definition of a method
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class B{
    void p(int a) {}
}

class A extends B{   
    void p(int a) {}
    void p(int c) {}
}
